--- a/BlazorNitflex/wwwroot/index.html
+++ b/BlazorNitflex/wwwroot/index.html
@@ -10,6 +10,8 @@
     <base href="/" />
     <link href="css/app.css" rel="stylesheet" />
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css">
+    <link rel="stylesheet"href ="_content/Radzen.Blazor/css/default.css">
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/material.css">
 
     <!-- If you add any scoped CSS files, uncomment the following to load them
     <link href="BlazorNitflex.styles.css" rel="stylesheet" /> -->
