--- a/BlazorNitflex/wwwroot/index.html
+++ b/BlazorNitflex/wwwroot/index.html
@@ -10,8 +10,9 @@
     <base href="/" />
     <link href="css/app.css" rel="stylesheet" />
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css">
-    <link rel="stylesheet"href ="_content/Radzen.Blazor/css/default.css">
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/default.css">
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/material.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-whatever" crossorigin="anonymous">
 
     <!-- If you add any scoped CSS files, uncomment the following to load them
     <link href="BlazorNitflex.styles.css" rel="stylesheet" /> -->
